--- a/_config.yaml
+++ b/_config.yaml
@@ -13,14 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Soon
+title: Coming Soon
 email: youremailaddress
 phone: 0123456789
 description: A coming soon page for Jekyll
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://yjpl.github.io/soon/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: alternatyves
-github_username: YJPL
+url: "https://assahasranamam.github.io/tesrtx/" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: assahasranamam
 
 # Build settings
 markdown: kramdown
