--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -13,8 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build the site in the jekyll/builder container
-      run: |
-        docker run \
-        -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "sudo chmod 777 /srv/jekyll && jekyll build --future"
+    
+    - name: jekyll-deploy
+  # You may pin to the exact commit or the version.
+  # uses: DavidS/jekyll-deploy@4e59472205269cce9739ac284303e74701fd7e9d
+      uses: DavidS/jekyll-deploy@1.1.1
+
