--- a/_config.yaml
+++ b/_config.yaml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Coming Soon
-email: youremailaddress
+title: Adi 
+email: adi.sahasranamam@gmail.com
 phone: 0123456789
 description: A coming soon page for Jekyll
 baseurl: "" # the subpath of your site, e.g. /blog
